<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.brokyfood.app.ui.home.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/actionHomeToDetail"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.brokyfood.app.ui.cart.CartFragment"
        android:label="@string/nav_cart" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.brokyfood.app.ui.detail.DetailFragment"
        android:label="@string/app_name">
        <argument
            android:name="food"
            app:argType="com.brokyfood.app.data.model.Food" />
    </fragment>

</navigation> 